@@ -1,3 +1,8 @@
+2006-10-25  Daiki Ueno  <ueno@unixuser.org>
+
+	* mixi.el (mixi-retrieve-function): Try to select
+	mixi-retrieve-function automatically.
+
 2006-10-25  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-cache-expires): Add new constant.
